# AnytimeCPS2015

./: .gitignore  .gitmodules  README.md  TestData_toyexample2_k3.mat
CDC14Code/: info.txt
CDC14Code/CDC_MPC/: GetTerminalSet.m  GetTerminalSetConsistent.m  PlantModel2DTracking.m  PlantModelNumerical.m  RMPC_Standalone_Consistent.m  RMPC_Standalone_MPT.m  RMPC_Standalone_MPT_Numerical.m  RobustMPCBasic.m
ContractBasedToolchain/: .gitignore  README.md  README.txt  genClassifiers.m  genPosInstances.m  params.txt  params_test.txt  plotHist.m  test.py  test.sh  train.m  train.sh
ContractBasedToolchain/classifiers/: vehDetector.xml
ContractBasedToolchain/devkit/: readme.txt
ContractBasedToolchain/results/: results.txt  vehDetector_1.txt  vehDetector_2.txt
Data/Barrel/: BarrelMasks.mat  info.txt
Data/QuadRotor/: info.txt
Invited_IEEE_ManEtc16/Abstract/: abstract.tex
MATLAB/: info
MATLAB/Miscellaneous/: .gitignore  ArraySignedDist2d.m  Beta_fhat_x.m  GetCoeffs_Beta.m  P2.mat  TestData_toyexample2.mat  fhat_x.m  getSignedDistance.m
MATLAB/STaliro_Smooth/: ParamsForUnitCube.mat  SimBlackBoxMdl.m  SimFunctionMdl.m  SimSimulinkMdl.m  Structural_Coverage.m  setup_staliro.m  staliro.m  staliro_blackbox.m  staliro_options.m  systemsimulator.m  temp.mat
MATLAB/SVO_Profiling/: Errs_100.mat  Errs_150.mat  Errs_200.mat  Errs_250.mat  Errs_50.mat  PlotProfile.m  ProfilingSummary.m  ReadBag.m  SVO_ProfilingData_perch.mat  (+4 more)
OpenCV/: info.txt
OpenCV/ObjDetector/BackupFiles/Display_Image/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.cpp  DisplayImage.cpp~  Makefile  cmake_install.cmake  gmon.out
OpenCV/ObjDetector/BackupFiles/Display_Image/argex/: fubar  fubar.cpp  fubar.cpp~
OpenCV/ObjDetector/BackupFiles/gmm_test/barrel_pixel/: #barrelpixel.cpp#  .barrel_pixel.cpp~.swp  CMakeCache.txt  CMakeLists.txt  Makefile  barrel_pixel.cpp~  barrelpixel.cpp  barrelpixel.cpp~  bkup.txt~  cmake_install.cmake  gmon.out  gmonout.txt  model.xml  profile.txt
Platform/: info.txt
Platform/FinalExperiments/rmpc_control_feas/: CMakeLists.txt  package.xml
Platform/FinalExperiments/rmpc_control_feas/config/: gains_T_small.yaml  gains_flying.yaml  true_gains.yaml
Platform/FinalExperiments/rmpc_control_feas/include/rmpc_control/: rmpcControl.hpp
Platform/FinalExperiments/rmpc_control_feas/include/rmpc_control/Mode33/: solver.h
Platform/FinalExperiments/rmpc_control_feas/include/rmpc_control/unconstrained/Mode1/: solver.h
Platform/FinalExperiments/rmpc_control_feas/include/rmpc_control/unconstrained/Mode2/: solver.h
Platform/FinalExperiments/rmpc_control_feas/src/: cowsay.c  rmpcControl.cpp  rmpc_control_nodelet.cpp
Platform/FinalExperiments/rmpc_control_feas/src/opt/: cvxscripter
Platform/FinalExperiments/rmpc_control_feas/src/opt/Mode11/: ldl.cpp  matrix_support.cpp  solver.cpp  solver.h  util.cpp
Platform/FinalExperiments/rmpc_control_feas/src/opt/Mode22/: ldl.cpp  matrix_support.cpp  solver.cpp  solver.h  util.cpp
Platform/FinalExperiments/rmpc_control_feas/src/opt/Mode33/: ldl.cpp  matrix_support.cpp  solver.cpp  util.cpp
Platform/FinalExperiments/rmpc_control_feas/src/opt/Mode44/: description.cvxgen  ldl.cpp  matrix_support.cpp  solver.cpp  solver.h  util.cpp
Platform/FinalExperiments/rmpc_control_feas/src/opt/backups_noconstraints/Mode1/: ldl.cpp  solver.cpp  solver.h
Platform/FinalExperiments/rmpc_control_feas/src/opt/backups_noconstraints/Mode11/: description.cvxgen  ldl.cpp  matrix_support.cpp  solver.cpp  solver.h  util.cpp
Platform/FinalExperiments/rmpc_control_feas/src/opt/backups_noconstraints/Mode2/: description.cvxgen  matrix_support.cpp  solver.cpp  solver.h
Platform/FinalExperiments/rmpc_control_feas/src/opt/backups_noconstraints/Mode22/: description.cvxgen  ldl.cpp  matrix_support.cpp  solver.cpp  solver.h  util.cpp
Platform/FinalExperiments/rmpc_control_feas/src/opt/backups_noconstraints/Mode3/: solver.cpp  solver.h
Platform/FinalExperiments/rmpc_control_feas/src/opt/backups_noconstraints/Mode33/: description.cvxgen  ldl.cpp  matrix_support.cpp  solver.cpp  solver.h  util.cpp
Platform/FinalExperiments/rmpc_control_feas/src/opt/backups_noconstraints/Mode44/: description.cvxgen  ldl.cpp  matrix_support.cpp  solver.cpp  solver.h  util.cpp
Platform/FinalExperiments/rmpc_control_feas/src/opt/backups_noconstraints/Mode44/bkp/: description.cvxgen  ldl.cpp  matrix_support.cpp  solver.cpp  solver.h  util.cpp
Platform/quadrotor_control-master/mpc_control/: CMakeLists.txt  CMakeLists.txt~  nodelet_plugin.xml  nodelet_plugin.xml~  package.xml  package.xml~
Platform/quadrotor_control-master/mpc_control/config/: gains.yaml
Platform/quadrotor_control-master/mpc_control/include/mpc_control/: MPCControl.hpp~  mpcControl.hpp  mpcControl.hpp~  solver.h
Platform/quadrotor_control-master/mpc_control/src/: #mpc_control_nodelet.cpp#  MPC_control_nodelet.cpp~  PIDControl.cpp~  description.cvxgen  ldl.c  matrix_support.c  mpcControl.cpp  mpcControl.cpp~  mpc_control_nodelet.cpp  mpc_control_nodelet.cpp~  solver.c  solver.c~  solver.h  util.c
Platform/quadrotor_control-master/rmpc_control/: CMakeLists.txt
Platform/quadrotor_control-master/rmpc_control/config/: gains.yaml  gains_T_small.yaml
Platform/quadrotor_control-master/rmpc_control/include/rmpc_control/: solver.h
Platform/quadrotor_control-master/rmpc_control/src/: ldl.c  matrix_support.c  rmpcControl.cpp  rmpc_control_nodelet.cpp  solver.c  solver.h  util.c
Platform/vision/vo_test/: CMakeLists.txt  package.xml
Platform/vision/vo_test/include/vo_test/: error_calculator.hpp
Platform/vision/vo_test/launch/: km.launch  km_2017.launch  tf.launch  vicon.launch
Platform/vision/vo_test/src/: error_calculator.cpp  main.cpp  node.cpp  node.hpp
Platform/vision/vo_test/srv/: SaveTrajectory.srv
Platform/vision/vo_utils/: CMakeLists.txt  package.xml
Platform/vision/vo_utils/cmake/: extras.cmake
Platform/vision/vo_utils/include/vo_utils/: base.hpp  pose.hpp  se3.hpp  statistics.hpp  time.hpp
Pubs/: .gitignore
RTSS15/: info.txt
smartpower-reader/: Makefile  sp.c
(+2658 files in other folders)
