<?xml version="1.0"?>
<package>
  <name>vo_test</name>
  <version>0.0.1</version>
  <description>Functionality for testing against Vicon</description>

  <maintainer email="gcross.code@icloud.com">gareth</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>vo_utils</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>rviz_helper</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>rviz_helper</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
