<?xml version="1.0"?>
<package>
  <name>vo_utils</name>
  <version>0.0.0</version>
  <description>The vo_utils package</description>

  <maintainer email="gcross.code@icloud.com">Gareth</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
